# wallet-bot

./: .gitignore  LICENSE  pyproject.toml
test/: test_credentials.py
test/telegram/: test_message.py
wallet_bot/: common.py  credentials.py  credentials.schema.json
wallet_bot/telegram/: message.py
wallet_bot/webserver/: webserver.py
