[tool.poetry]
name = "wallet-bot"
version = "0.1.0"
description = "Telegram Bot for managing household budgets"
authors = ["Zach Smith"]
license = "MIT"
readme = "README.md"
packages = [{include = "wallet_bot"}]

[tool.poetry.dependencies]
python = "^3.8"
jsonschema = "^4.16.0"
SQLAlchemy = "^1.4.41"
Flask = "^2.2.2"
requests = "^2.28.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
